# Steam-Like-Multiservices

./: .env.template  LICENSE.txt  README.MD  compose.yml
Client/: .clang-format  .gitignore  CMakeLists.txt  README.MD  vcpkg.json
Client/HttpLibrary/: CMakeLists.txt
Client/HttpLibrary/include/: HttpGetRequest.hpp  HttpLibrary.hpp  HttpResponse.hpp  pch.hpp
Client/ServerFacade/: CMakeLists.txt
Client/ServerFacade/include/: GameDTO.hpp  ServerFacade.hpp
Client/ServerFacade/src/: ServerFacade.cpp
Client/SteamLikeClient/: CMakeLists.txt  main.cpp  pch.hpp
Client/SteamLikeClient/Widgets/: GameFrame.cpp  GameFrame.h  GameGrid.cpp  GameGrid.h  SteamClientWindow.cpp  SteamClientWindow.h
GoApi/: Dockerfile  README.MD  go.mod  main.go
GoApi/Controllers/: GameController.go
GoApi/DB/: DB.go
GoApi/Logger/: Logger.go
GoApi/Models/: Game.go
GoApi/swagger/: swagger.json
